--- a/Views/LederView.xaml
+++ b/Views/LederView.xaml
@@ -8,96 +8,98 @@
         d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="0.02*" />
-            <ColumnDefinition Width="1.15*" />
-            <ColumnDefinition Width="0.01*" />
-            <ColumnDefinition Width="0.15*" />
+            <ColumnDefinition Width="0.02*"/>
+            <ColumnDefinition Width="1.15*"/>
+            <ColumnDefinition Width="0.01*"/>
+            <ColumnDefinition Width="0.15*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="70" />
-            <RowDefinition Height="*" />
+            <RowDefinition Height="70"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid HorizontalAlignment="Right" Grid.Column="1" Grid.Row="0">
             <DockPanel Height="30" VerticalAlignment="Top">
-                <Button x:Name="btnRKV" Content="RKV" HorizontalAlignment="Left" VerticalAlignment="Bottom" Style="{StaticResource btnShow}" />
-                <Separator Style="{StaticResource SepSpaceW}" />
-                <Button x:Name="btnMerit" Content="Merit" HorizontalAlignment="Left" VerticalAlignment="Bottom" Style="{StaticResource btnShow}" />
-                <Separator Style="{StaticResource SepSpaceW}" />
-                <Button x:Name="btnVisAlle" Content="Vis Alle" HorizontalAlignment="Left" VerticalAlignment="Bottom" Style="{StaticResource btnShow}" />
+                <Button x:Name="btnRKV" Content="RKV" HorizontalAlignment="Left" VerticalAlignment="Bottom" Style="{StaticResource btnShow}"/>
+                <Separator Style="{StaticResource SepSpaceW}"/>
+                <Button x:Name="btnMerit" Content="Merit" HorizontalAlignment="Left" VerticalAlignment="Bottom" Style="{StaticResource btnShow}"/>
+                <Separator Style="{StaticResource SepSpaceW}"/>
+                <Button x:Name="btnVisAlle" Content="Vis Alle" HorizontalAlignment="Left" VerticalAlignment="Bottom" Style="{StaticResource btnShow}"/>
             </DockPanel>
-            <Separator Background="Transparent" />
+            <Separator Background="Transparent"/>
             <DockPanel Height="30" VerticalAlignment="Bottom">
-                <Button x:Name="btnSPS" Content="SPS" HorizontalAlignment="Left" VerticalAlignment="Top" Style="{StaticResource btnShow}" />
-                <Separator Style="{StaticResource SepSpaceW}" />
-                <Button x:Name="btnEUD" Content="EUD" HorizontalAlignment="Left" VerticalAlignment="Top" Style="{StaticResource btnShow}" />
-                <Separator Style="{StaticResource SepSpaceW}" />
-                <TextBox Width="160" Height="20" x:Name="txtSearch" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Top" />
+                <Button x:Name="btnSPS" Content="SPS" HorizontalAlignment="Left" VerticalAlignment="Top" Style="{StaticResource btnShow}"/>
+                <Separator Style="{StaticResource SepSpaceW}"/>
+                <Button x:Name="btnEUD" Content="EUD" HorizontalAlignment="Left" VerticalAlignment="Top" Style="{StaticResource btnShow}"/>
+                <Separator Style="{StaticResource SepSpaceW}"/>
+                <TextBox x:Name="txtSearch" Width="160" Height="20" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Top"/>
             </DockPanel>
         </Grid>
         <DockPanel Grid.Column="1" Grid.Row="0" HorizontalAlignment="Left">
             <StackPanel VerticalAlignment="Center">
-                <ComboBox Width="200" Height="25" x:Name="cmbKategori" HorizontalAlignment="Left" VerticalAlignment="Bottom" />
+                <ComboBox x:Name="cmbKategori" Width="200" Height="25" HorizontalAlignment="Left" VerticalAlignment="Bottom"/>
                 <Separator Background="Transparent" Height="5" />
-                <ComboBox Width="200" Height="25" x:Name="cmbSubkategori" HorizontalAlignment="Left" VerticalAlignment="Top" />
+                <ComboBox x:Name="cmbSubkategori" Width="200" Height="25" HorizontalAlignment="Left" VerticalAlignment="Top"/>
             </StackPanel>
             <StackPanel VerticalAlignment="Center">
-                <Label Content="Udd. Linje" />
-                <Separator Background="Transparent" Height="5" />
-                <Label Content="Add. Linje" />
+                <Label Content="Udd. Linje"/>
+                <Separator Background="Transparent" Height="5"/>
+                <Label Content="Add. Linje"/>
             </StackPanel>
         </DockPanel>
         <Border Grid.Column="3" Grid.Row="0" Background="#495057" BorderThickness="5" BorderBrush="Gray">
-            <TextBlock  Text="Admin" FontSize="28" HorizontalAlignment="Center" VerticalAlignment="Center" />
+            <TextBlock  Text="Admin" FontSize="28" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         </Border>
         <StackPanel Background="#495057" Grid.Column="3" Grid.Row="1">
-            <Separator Style="{StaticResource SepSpaceH}" />
-            <Button x:Name="btnExportMerit" Content="Merit Export" Style="{StaticResource btnAdmin}" />
-            <Separator Style="{StaticResource SepSpaceH}" />
-            <Button x:Name="btnExportRKV" Content="RKV Export" Style="{StaticResource btnAdmin}" />
-            <Separator Style="{StaticResource SepSpaceH}" />
-            <TextBlock Text="EXCEL" HorizontalAlignment="Center" FontSize="25" />
-            <Separator Style="{StaticResource SepSpaceH}" />
-            <Button x:Name="btnExcel" Content="Tilføj"  Style="{StaticResource btnAdmin}" />
-            <Separator Style="{StaticResource SepSpaceH}" />
-            <Button x:Name="btnReset" Content="Reset" Style="{StaticResource btnAdmin}" />
-            <Separator Style="{StaticResource SepSpaceH}" />
-            <Button Width="80" Height="20" x:Name="btnOpen_RKV" Content="Åben RKV" IsEnabled="False" />
-            <Separator Style="{StaticResource SepSpaceH}" />
-            <Button  Width="80" Height="20" x:Name="btnOpen_Merit" Content="Åben Merit" IsEnabled="False" />
-            <Separator Style="{StaticResource SepSpaceH}" />
-            <Button  Width="80" Height="25" x:Name="btnSkiftPassword" Content="Skift Password" Click="SkiftPassword_btnClick" />
+            <Separator Style="{StaticResource SepSpaceH}"/>
+            <Button x:Name="btnExportMerit" Content="Merit Export" Style="{StaticResource btnAdmin}"/>
+            <Separator Style="{StaticResource SepSpaceH}"/>
+            <Button x:Name="btnExportRKV" Content="RKV Export" Style="{StaticResource btnAdmin}"/>
+            <Separator Style="{StaticResource SepSpaceH}"/>
+            <TextBlock Text="EXCEL" HorizontalAlignment="Center" FontSize="25"/>
+            <Separator Style="{StaticResource SepSpaceH}"/>
+            <Button x:Name="btnExcel" Content="Tilføj"  Style="{StaticResource btnAdmin}"/>
+            <Separator Style="{StaticResource SepSpaceH}"/>
+            <Button x:Name="btnReset" Content="Reset" Style="{StaticResource btnAdmin}"/>
+            <Separator Style="{StaticResource SepSpaceH}"/>
+            <Button x:Name="btnOpen_RKV" Width="80" Height="20" Content="Åben RKV" IsEnabled="False"/>
+            <Separator Style="{StaticResource SepSpaceH}"/>
+            <Button x:Name="btnOpen_Merit" Width="80" Height="20" Content="Åben Merit" IsEnabled="False"/>
+            <Separator Style="{StaticResource SepSpaceH}"/>
+            <Button x:Name="btnSkiftPassword" Width="80" Height="25"  Content="Skift Password"/>
         </StackPanel>
 
-        <DataGrid x:Name="gridElevTabel" AutoGenerateColumns="False" Grid.Column="1" Grid.Row="1" SelectionChanged="elevTabel_SelectionChanged" IsReadOnly="True" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+        <DataGrid x:Name="gridElevTabel" AutoGenerateColumns="False" Grid.Column="1" Grid.Row="1" IsReadOnly="True" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="CPR" Binding="{Binding CPRNr}" />
-                <DataGridTextColumn Header="Fornavn" Binding="{Binding Fornavn}" />
-                <DataGridTextColumn Header="Efternavn" Binding="{Binding Efternavn}" />
-                <DataGridTextColumn Header="Uddannelse" Binding="{Binding UddLinje}" />
-                <DataGridTextColumn Header="UdannelseAdresse" Binding="{Binding UddAdr}" />
-                <DataGridTextColumn Header="SPS" Binding="{Binding SPS}" />
-                <DataGridTextColumn Header="EUD" Binding="{Binding EUD}" />
-                <DataGridTextColumn Header="ElevType" Binding="{Binding ElevType}" />
-                <DataGridTextColumn Header="danskNiveau" Binding="{Binding DanNiveau}" />
-                <DataGridTextColumn Header="EngelskNiveau" Binding="{Binding EngNiveau}" />
-                <DataGridTextColumn Header="MatematikNiveau" Binding="{Binding MatNiveau}" />
+                <DataGridTextColumn Header="CPR" Binding="{Binding CPRNr}"/>
+                <DataGridTextColumn Header="Fornavn" Binding="{Binding Fornavn}"/>
+                <DataGridTextColumn Header="Efternavn" Binding="{Binding Efternavn}"/>
+                <DataGridTextColumn Header="Uddannelse" Binding="{Binding UddLinje}"/>
+                <DataGridTextColumn Header="UdannelseAdresse" Binding="{Binding UddAdr}"/>
+                <DataGridTextColumn Header="SPS" Binding="{Binding SPS}"/>
+                <DataGridTextColumn Header="EUD" Binding="{Binding EUD}"/>
+                <DataGridTextColumn Header="ElevType" Binding="{Binding ElevType}"/>
+                <DataGridTextColumn Header="danskNiveau" Binding="{Binding DanNiveau}"/>
+                <DataGridTextColumn Header="EngelskNiveau" Binding="{Binding EngNiveau}"/>
+                <DataGridTextColumn Header="MatematikNiveau" Binding="{Binding MatNiveau}"/>
             </DataGrid.Columns>
         </DataGrid>
-        <Grid x:Name="overlayLoading" Grid.Column="0" Grid.ColumnSpan="4" Grid.Row="0" Grid.RowSpan="2" Visibility="Collapsed">
-            <Border Background="Black" Opacity="0.35" />
-            <StackPanel VerticalAlignment="Center">
-                <TextBlock Width="200" Height="20" Text="Kodeord" FontSize="16" TextAlignment="Justify" />
-                <TextBox Width="200" Height="20" x:Name="txtKodeord" />
-                <Separator Height="12" Background="Transparent" />
-                <TextBlock Width="200" Height="20" Text="Bekræft Kodeord" FontSize="16" TextAlignment="Justify" />
-                <TextBox Width="200" Height="20" x:Name="txtValiderKodeord" />
-                <Separator Height="12" Background="Transparent" />
-                <DockPanel HorizontalAlignment="Center">
-                    <Button Width="95" Height="30" FontSize="15" Content="Tilbage" VerticalAlignment="Center" HorizontalAlignment="Left" Background="LightBlue" Click="Button_Click" />
-                    <Separator Width="10" />
-                    <Button Width="95" Height="30" FontSize="15" Content="Skift Kodeord" x:Name="btnValiderKodeord" Background="LightBlue" Click="ValiderOpdaterPassword_btnClick" />
-                </DockPanel>
-            </StackPanel>
+        <Grid x:Name="overlayLoading" Grid.Column="0" Grid.ColumnSpan="4" Grid.Row="0" Grid.RowSpan="2" Visibility="Visible">
+            <Border Background="Black" Opacity="0.35"/>
+            <Border VerticalAlignment="Center" HorizontalAlignment="Center" Background="White" Padding="20">
+                <StackPanel VerticalAlignment="Center">
+                    <TextBlock Width="200" Height="20" Text="Kodeord" FontSize="16" TextAlignment="Justify"/>
+                    <PasswordBox x:Name="txtKodeord" Width="200" Height="20"/>
+                    <Separator Height="12" Background="Transparent" />
+                    <TextBlock Width="200" Height="20" Text="Bekræft Kodeord" FontSize="16" TextAlignment="Justify"/>
+                    <PasswordBox x:Name="txtValiderKodeord" Width="200" Height="20" />
+                    <Separator Height="12" Background="Transparent"/>
+                    <DockPanel HorizontalAlignment="Center">
+                        <Button x:Name="btnTilbage" Width="95" Height="30" FontSize="15" Content="Tilbage" VerticalAlignment="Center" HorizontalAlignment="Left" Background="LightBlue"/>
+                        <Separator Width="10" Background="Transparent"/>
+                        <Button x:Name="btnValiderKodeord" Width="95" Height="30" FontSize="15" Content="Skift Kodeord" Background="LightBlue"/>
+                    </DockPanel>
+                </StackPanel>
+            </Border>
         </Grid>
     </Grid>
 </UserControl>
