--- a/Views/MeritBlanketView.xaml
+++ b/Views/MeritBlanketView.xaml
@@ -13,10 +13,10 @@
             <ColumnDefinition Width="0.1*" />
         </Grid.ColumnDefinitions>
         <Border Grid.Column="1" BorderBrush="Gray" BorderThickness="0" Visibility="Visible">
-            <StackPanel Grid.Column="0" Grid.Row="4"  x:Name="stackMerit">
+            <StackPanel x:Name="stackMerit" Grid.Column="0" Grid.Row="4">
                 <Label Content="Ansøgning om merit på Grundforløb , GF2:" FontSize="20" FontWeight="Bold" />
                 <Separator Height="20" Background="Transparent"/>
-                <Border BorderBrush="Gray" BorderThickness="1" x:Name="bdrDanskValidation" Height="80">
+                <Border x:Name="bdrDanskValidation" BorderBrush="Gray" BorderThickness="1" Height="80">
                     <DockPanel>
                         <Label Content="Dansk:" Style="{StaticResource lblOverskrift}" />
                         <Label Content="Niveau" FontSize="15" VerticalAlignment="Stretch" VerticalContentAlignment="Center"/>
@@ -56,7 +56,7 @@
                     </DockPanel>
                 </Border>
                 <Separator Height="20" Background="Transparent" Padding="0" Margin="0" />
-                <Border BorderBrush="Gray" BorderThickness="1" x:Name="bdrEngelskValidation" Height="80">
+                <Border x:Name="bdrEngelskValidation" BorderBrush="Gray" BorderThickness="1" Height="80">
                     <DockPanel>
                         <Label Content="Engelsk:" Style="{StaticResource lblOverskrift}" />
                         <Label Content="Niveau" FontSize="15" VerticalAlignment="Center" />
@@ -97,7 +97,7 @@
                 </Border>
                 <!--<Border Style="{StaticResource bdrSpace}" />-->
                 <Separator Height="20" Background="Transparent" Padding="0" Margin="0" />
-                <Border BorderBrush="Gray" BorderThickness="1" x:Name="bdrMatematikValidation" Height="80">
+                <Border x:Name="bdrMatematikValidation" BorderBrush="Gray" BorderThickness="1" Height="80">
                     <DockPanel>
                         <Label Content="Matematik:" Style="{StaticResource lblOverskrift}" />
                         <Label Content="Niveau" FontSize="15" VerticalAlignment="Center" />
