--- a/Views/VisitationsView.xaml
+++ b/Views/VisitationsView.xaml
@@ -9,25 +9,25 @@
     <Grid>
         <StackPanel>
             <Label Content="Interview guide til Visitations elever"  Style="{StaticResource labVisitation}" />
-            <Border Style="{StaticResource bdrVisitation}" x:Name="bdrEducation" Width="600" Height="80">
+            <Border x:Name="bdrEducation" Style="{StaticResource bdrVisitation}" Width="600" Height="80">
                 <StackPanel VerticalAlignment="Center">
                     <Label  Content="Hvilken uddannelse ønske du at påbegynde?" FontSize="15" HorizontalAlignment="Center" />
                     <ComboBox x:Name="cmbEducation" Width="250" />
                 </StackPanel>
             </Border>
             <Separator Style="{StaticResource SepSpaceH}" />
-            <Border Style="{StaticResource bdrVisitation}" x:Name="bdrAdresse" Width="600" Height="80">
+            <Border x:Name="bdrAdresse" Style="{StaticResource bdrVisitation}" Width="600" Height="80">
                 <StackPanel VerticalAlignment="Center">
                     <Label  Content="Hvilken adresse ønske du at starte på?" FontSize="15" HorizontalAlignment="Center" />
                     <ComboBox x:Name="cmbAdresse" Width="250" />
                 </StackPanel>
             </Border>
             <Separator Style="{StaticResource SepSpaceH}" />
-            <Border Style="{StaticResource bdrVisitation}" x:Name="bdrSps" Width="600" Height="80">
+            <Border x:Name="bdrSps" Style="{StaticResource bdrVisitation}" Width="600" Height="80">
                 <StackPanel VerticalAlignment="Center">
                     <Label Content="Har du modtaget særlige støtte eller ønsker at søge om særlige pædagogiske støtte?" FontSize="15" HorizontalAlignment="Center" />
                     <DockPanel x:Name="docsps" Width="150" HorizontalAlignment="Center">
-                        <RadioButton GroupName="spsSupport" x:Name="rbSpsJa" Content="Ja" HorizontalAlignment="Left" VerticalAlignment="Center">
+                        <RadioButton x:Name="rbSpsJa" GroupName="spsSupport" Content="Ja" HorizontalAlignment="Left" VerticalAlignment="Center">
                             <RadioButton.RenderTransform>
                                 <ScaleTransform ScaleX="1.5" ScaleY="1.5" />
                             </RadioButton.RenderTransform>
@@ -46,12 +46,12 @@
                     <Label Content="Ønsker du en samtale med eud vejleder?" FontSize="15" HorizontalAlignment="Center" />
 
                     <DockPanel x:Name="docEud" Width="150">
-                        <RadioButton GroupName="eudSupport" x:Name="rbEudJa" Content="Ja" HorizontalAlignment="Left" VerticalAlignment="Center">
+                        <RadioButton x:Name="rbEudJa" GroupName="eudSupport" Content="Ja" HorizontalAlignment="Left" VerticalAlignment="Center">
                             <RadioButton.RenderTransform>
                                 <ScaleTransform ScaleX="1.5" ScaleY="1.5" />
                             </RadioButton.RenderTransform>
                         </RadioButton>
-                        <RadioButton GroupName="eudSupport" x:Name="rbEudNej" Content="Nej" HorizontalAlignment="Right" VerticalAlignment="Center">
+                        <RadioButton x:Name="rbEudNej" GroupName="eudSupport" Content="Nej" HorizontalAlignment="Right" VerticalAlignment="Center">
                             <RadioButton.RenderTransform>
                                 <ScaleTransform ScaleX="1.5" ScaleY="1.5" />
                             </RadioButton.RenderTransform>
