--- a/Views/EUVView.xaml
+++ b/Views/EUVView.xaml
@@ -17,7 +17,7 @@
             <Border x:Name="bdrEducation" BorderBrush="Gray" BorderThickness="1">
                 <StackPanel>
                     <DockPanel>
-                        <Label Content="Uddanelse:" FontSize="15" VerticalContentAlignment="Center" FontWeight="Black" />
+                        <Label Content="Uddannelse:"  Style="{StaticResource lblOverskrift2}"/>
                         <StackPanel HorizontalAlignment="Stretch">
                             <Label  Content="Hvilken uddannelse ønske du at påbegynde?" FontSize="16" HorizontalAlignment="Center" />
                             <ComboBox x:Name="cmbEducation" Width="240" />
@@ -29,21 +29,21 @@
             <Border x:Name="bdrAdresse" Style="{StaticResource bdrEUV2}">
                 <StackPanel>
                     <DockPanel>
-                        <Label Content="Adresse:" FontSize="15" VerticalContentAlignment="Center" FontWeight="Black" />
+                        <Label Content="Adresse:"  Style="{StaticResource lblOverskrift2}"/>
                         <StackPanel HorizontalAlignment="Stretch">
                             <TextBlock TextWrapping="WrapWithOverflow" Text="Hvilken adresse ønske du at starte på?" FontSize="16" HorizontalAlignment="Center" />
-                            <ComboBox x:Name="cmbUddannelse" Width="160" />
+                            <ComboBox x:Name="cmbUddannelse" Width="200" />
                         </StackPanel>
                     </DockPanel>
                 </StackPanel>
             </Border>
             <Separator Style="{StaticResource SepSpaceH}" />
-            <Border BorderBrush="Gray" BorderThickness="1">
+            <Border BorderBrush="Gray" BorderThickness="1" Style="{StaticResource bdrEUV2}">
                 <StackPanel>
                     <DockPanel>
-                        <Label Content="EUV1:" FontSize="15" VerticalContentAlignment="Center" FontWeight="Black" />
+                        <Label Content="EUV1:"  Style="{StaticResource lblOverskrift2}"/>
                         <StackPanel HorizontalAlignment="Stretch">
-                            <Label  Content="Har du 2 års relevant erhvervserfaring, inde for de sidste 5 år?" FontSize="13" HorizontalAlignment="Center" />
+                            <Label  Content="Har du 2 års relevant erhvervserfaring, inde for de sidste 5 år?" FontSize="16" HorizontalAlignment="Center" />
                             <DockPanel Style="{StaticResource docKnapH}">
                                 <RadioButton x:Name="rbEuv1Ja" GroupName="grpeuv1" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Ja">
                                     <RadioButton.RenderTransform>
@@ -114,7 +114,7 @@
                                 <Separator Style="{StaticResource SepSpaceH}" />
                                 <Border x:Name="bdrEuv1Svar" Style="{StaticResource bdrEUV}">
                                     <DockPanel>
-                                        <Label Content="EUV1:" FontSize="15" VerticalContentAlignment="Center" FontWeight="Black" />
+                                        <Label Content="EUV1:" Style="{StaticResource lblOverskrift2}"/>
                                         <StackPanel HorizontalAlignment="Stretch">
                                             <TextBlock Text="Passer disse spørgsmål til din erfaring?" FontSize="16" HorizontalAlignment="Center" />
                                             <DockPanel Name="docEuv1Sprg" Style="{StaticResource docKnapH}">
@@ -137,12 +137,13 @@
                     </Expander>
 
                     <Expander x:Name="expEuv2">
-                        <Border  x:Name="bdrEuv2">
+                        <Border  x:Name="bdrEuv2" Style="{StaticResource bdrEUV2}">
                             <DockPanel>
-                                <Label Content="EUV2:" FontSize="15" VerticalContentAlignment="Center" FontWeight="Black" />
-                                <StackPanel>
+                                <Label Content="EUV2:"  Style="{StaticResource lblOverskrift2}"/>
+                                <StackPanel HorizontalAlignment="Stretch" >
 
-                                    <TextBlock TextWrapping="WrapWithOverflow" Text="Har du en dokumenteret afsluttet uddannelse og/eller har du mindre end 2 års relevant dokumenteret erhvervserfaring." FontSize="16"  HorizontalAlignment="Center" />
+                                    <TextBlock TextWrapping="WrapWithOverflow" TextAlignment="Center"  Text="Har du en dokumenteret afsluttet uddannelse?" FontSize="16"  />
+                                    <TextBlock TextWrapping="WrapWithOverflow" TextAlignment="Center"  Text="Har du mindre end 2 års relevant dokumenteret erhvervserfaring." FontSize="16"  />
                                     <DockPanel Style="{StaticResource docKnapH}">
                                         <RadioButton x:Name="rbEuv2Ja" Content="Ja" HorizontalAlignment="Right" VerticalAlignment="Center">
                                             <RadioButton.RenderTransform>
@@ -162,11 +163,12 @@
                 </StackPanel>
             </Border>
             <Separator Style="{StaticResource SepSpaceH}" />
-            <Border x:Name="bdrSps" Style="{StaticResource bdrEUV2}" Height="70">
+            <Border x:Name="bdrSps" Style="{StaticResource bdrEUV2}">
                 <DockPanel x:Name="stackSps">
-                    <Label Content="SPS:" FontSize="15" VerticalContentAlignment="Center" FontWeight="Black" />
+                    <Label Content="SPS:" Style="{StaticResource lblOverskrift2}"/>
                     <StackPanel>
-                        <TextBlock TextWrapping="WrapWithOverflow" Text="Har du modtaget særlige støtte eller ønsker du at søge om særlige pædagogiske støtte?" FontSize="16" HorizontalAlignment="Center" />
+                        <TextBlock TextWrapping="WrapWithOverflow" Text="Har du modtaget særlige støtte" FontSize="16" HorizontalAlignment="Center" />
+                        <TextBlock TextWrapping="WrapWithOverflow" Text="eller ønsker du at søge om særlige pædagogiske støtte?" FontSize="16" HorizontalAlignment="Center" />
                         <DockPanel Style="{StaticResource docKnapH}">
                             <RadioButton x:Name="rbSpsJa" Content="Ja" HorizontalAlignment="Right" VerticalAlignment="Center">
                                 <RadioButton.RenderTransform>
@@ -183,11 +185,11 @@
                 </DockPanel>
             </Border>
             <Separator Style="{StaticResource SepSpaceH}" />
-            <Border x:Name="bdrEud" Style="{StaticResource bdrEUV2}" Height="70">
+            <Border x:Name="bdrEud" Style="{StaticResource bdrEUV2}" VerticalAlignment="Stretch">
                 <DockPanel x:Name="stackEud">
-                    <Label Content="EUD:" FontSize="15" VerticalContentAlignment="Center" FontWeight="Black" />
+                    <Label Content="EUD:"  Style="{StaticResource lblOverskrift2}"/>
                     <StackPanel>
-                        <TextBlock TextWrapping="WrapWithOverflow" Text="Ønsker du en samtale med en eud vejleder?" FontSize="16" HorizontalAlignment="Center" />
+                        <TextBlock TextWrapping="WrapWithOverflow" Text="Ønsker du en samtale med en EUD vejleder?" FontSize="16" HorizontalAlignment="Center"/>
                         <DockPanel Style="{StaticResource docKnapH}">
                             <RadioButton x:Name="rbEudJa" Content="Ja" HorizontalAlignment="Right" VerticalAlignment="Center">
                                 <RadioButton.RenderTransform>
